--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-image-gallery": "^1.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "underscore": "^1.13.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
